--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-onetable",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsc --project tsconfig-build.json",
     "prebuild": "npx rimraf dist",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "lint": "eslint \"{src}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
     "@nestjs/testing": "^10.2.10",
+    "@shelf/jest-dynamodb": "^3.4.2",
     "@types/jest": "^29.5.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
